2008-02-29  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mh/mh_ctx.c (mh_context_read): Allow for header continuation
	lines.
	* mh/mh_whom.c (mh_whom): Improve diagnostics.

2008-02-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/Makefile.am (AM_LDFLAGS): Remove.
	(LDADD): Add the necessary libraries.
	(aclck_LDADD, argcv_LDADD): Remove.
	(muemail_LDADD): Needs MU_APP_LIBRARIES.

2008-02-26  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libcfg/init.c: Fix error reporting.
	* mailbox/cfg_driver.c (mu_parse_config): Fix memory leak.

2008-02-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libsieve/load.c: Add forward declaration of _add_load_dir
	* mailbox/parsedate.y (DATE_SET): Fix bug introduced 2008-01-02:
	val can sometimes be negative.
	* examples/Makefile.am (aclck_LDADD): Define.

2008-02-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/comsat.c (comsat_cfg_param): Reword a help message
	for require-tty.
	* examples/header.c (cmd_readline): New function.
	New command 'readline'.
	* po/POTFILES.in: Remove stray reference to muerrno.c

2008-02-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/action.c (act_getline): Bugfix. Do not return eof
	on an empty line. Reported by Damon Harper.

2008-02-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/pop3client.c: Implement variable expansions in the
	prompt. 

	* NEWS: Update.

	* pop3d/bulletin.c (read_bulletin_db): Return success if db does
	not exist.
	* lib/strexit.c: New file.
	* lib/signal.c: New file.
	
2008-02-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	* pop3d/extra.c (pop3d_readline): After a failed authorization
	attempt many clients simply disconnect without issuing QUIT. 
	Do not count this as a protocol error.    

	* NEWS: Update.
	* imap4d/bye.c, imap4d/starttls.c, imap4d/util.c: Use exit codes
	from sysexits.h
	* imap4d/imap4d.c: Use mu_set_signals to install signals.
	Use exit codes from sysexits.h.
	* imap4d/imap4d.h: Include sysexits.h and muaux.h
	(ERR_TERMINATE): New define.